--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,9 +6,11 @@ Author: Daniel Runcie
 Maintainer: Daniel Runcie <deruncie@ucdavis.edu>
 Description: Implements several functions for dealing with experimental designs
     and analyses
-License: GPL-3
+License: MIT
 Encoding: UTF-8
 LazyData: true
 Imports:
     ggplot2
-RoxygenNote: 5.0.1
+Requires:
+    car
+RoxygenNote: 7.1.1
