--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,4 +5,5 @@ export(is_aliased)
 export(is_crossed)
 export(is_nested)
 export(pls205_diagnostics)
+export(block_interactions_plot)
 export(stat_plotlm)
